# nat-size-numbers

./: README.md  nat-sized-numbers.cabal  stack.yaml
src/Numeric/Sized/: Int.hs  IntOfSize.hs  Word.hs  WordOfSize.hs
test/: Spec.hs
